--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,15 +5,16 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
-    // "lib": ["es2021"],
+    "lib": ["es2021", "DOM", "DOM.Iterable"],
     "module": "commonjs",
-    // "moduleResolution": "node",
+    "moduleResolution": "node",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "resolveJsonModule": true,
-    // "sourceMap": true,
+    "sourceMap": true,
     "skipLibCheck": true,
     "strict": true,
     "target": "es2021"
-  }
+  },
+  "exclude": ["node_modules"]
 }
