--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "concurrently": "7.1.0",
     "electron": "18.0.3",
     "electron-is-dev": "2.0.0",
+    "goober": "2.1.8",
     "html-webpack-plugin": "5.5.0",
     "nodemon": "2.0.15",
     "react": "18.0.0",
