--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react:dev": "webpack serve --mode=development",
     "electron:dev": "nodemon",
     "dev": "concurrently --kill-others \"npm run react:dev\" \"npm run electron:dev\"",
-    "start": "npm run build && electron dist/main.js"
+    "start": "npm run build && electron dist/main.js",
+    "lint": "eslint --parser-options project:tsconfig.json --ext ts,js src"
   },
   "repository": {
     "type": "git",
@@ -23,9 +24,18 @@
   "devDependencies": {
     "@types/react": "18.0.1",
     "@types/react-dom": "18.0.0",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
     "concurrently": "7.1.0",
     "electron": "18.0.3",
     "electron-is-dev": "2.0.0",
+    "eslint": "8.13.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "2.7.1",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-prettier": "4.0.0",
     "goober": "2.1.8",
     "html-webpack-plugin": "5.5.0",
     "nodemon": "2.0.15",
