--- a/package.json
+++ b/package.json
@@ -22,29 +22,31 @@
   },
   "homepage": "https://github.com/Hyokune/bonfire#readme",
   "devDependencies": {
-    "@types/react": "18.0.1",
-    "@types/react-dom": "18.0.0",
-    "@typescript-eslint/eslint-plugin": "5.19.0",
-    "@typescript-eslint/parser": "5.19.0",
-    "concurrently": "7.1.0",
-    "electron": "18.0.3",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/webpack": "5.28.0",
+    "@typescript-eslint/eslint-plugin": "5.51.0",
+    "@typescript-eslint/parser": "5.51.0",
+    "concurrently": "7.6.0",
+    "electron": "23.1.2",
     "electron-is-dev": "2.0.0",
-    "eslint": "8.13.0",
+    "eslint": "8.34.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-import-resolver-typescript": "2.7.1",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-prettier": "4.0.0",
-    "goober": "2.1.8",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-import-resolver-typescript": "3.5.3",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "goober": "2.1.12",
     "html-webpack-plugin": "5.5.0",
-    "nodemon": "2.0.15",
+    "nodemon": "2.0.21",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "ts-loader": "9.2.8",
-    "typescript": "4.6.3",
-    "webpack": "5.72.0",
-    "webpack-cli": "4.9.2",
-    "webpack-dev-server": "4.8.1"
+    "ts-loader": "9.4.2",
+    "typescript": "4.9.5",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.11.1",
+    "webpack-merge": "5.8.0"
   }
 }
