#1 Fix webpack configurations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,10 @@
     "target": "ES2022"
   },
   "include": ["./src/"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
+  }
 }
