--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A Dark Souls tool to help backup saves",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "react:dev": "webpack serve --mode=development",
+    "build": "webpack --config webpack.prod.ts",
+    "react:dev": "webpack serve --config webpack.react.dev.ts",
     "electron:dev": "nodemon",
     "dev": "concurrently --kill-others \"npm run react:dev\" \"npm run electron:dev\"",
     "start": "npm run build && electron dist/main.js",
@@ -40,9 +40,10 @@
     "goober": "2.1.12",
     "html-webpack-plugin": "5.5.0",
     "nodemon": "2.0.21",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "ts-loader": "9.4.2",
+    "ts-node": "10.9.1",
     "typescript": "4.9.5",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1",
