--- a/.github/workflows/check-post-push.yml
+++ b/.github/workflows/check-post-push.yml
@@ -4,28 +4,40 @@ on:
   push:
     paths:
       - '**/*.tsx?'
+      - '**/*.jsx?'
       - '**/*.json'
       - '**/*.yaml'
       - '.github/workflows/check-post-push.yml'
-      - '.eslintrc.js'
+    branches-ignore:
+      - 'dependabot/**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set sha7 env variable
-        run: echo "SHA7=$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
-
-      - name: Use Node.js v12.13.0
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - name: Use Node.js v19.6.0
+        uses: actions/setup-node@v3
         with:
-          node-version: '12.13.0'
-          cache: 'npm'
+          node-version: '19.6.0'
 
-      - name: Install top level deps for linting
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      - name: Install Dependencies
         run: npm install
         working-directory: .
 
@@ -33,6 +45,6 @@ jobs:
         run: npm run lint
         working-directory: .
 
-      - name: Run build
-        run: npm run build
+      - name: Run type check
+        run: npm run typeCheck
         working-directory: .
